Fixed apis requested from ganesh on especially lounges and getLoungeId
