# src/main/java/ai/ozzu/api/persistence/repo/ConceptTermRepository.java
@@ -4,9 +4,12 @@ import ai.ozzu.api.persistence.entity.ConceptTermEntity;
 import org.springframework.data.jpa.repository.JpaRepository;
 
 import java.util.List;
+import java.util.Optional;
 import java.util.UUID;
 
 public interface ConceptTermRepository extends JpaRepository<ConceptTermEntity, UUID> {
   List<ConceptTermEntity> findByDomain_Id(UUID domainId);
   List<ConceptTermEntity> findByParent_Id(UUID parentId);
+
+  Optional<ConceptTermEntity> findByIdAndDomain_Id(UUID id, UUID domainId);
 }
